Fix alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -91,7 +91,7 @@ ul {
   padding-left:220px;
   padding-top:10px;
   /*top: -166px;*/
-  width: 960px;
+  /*width: 960px;*/
 }
 
 .photos ul li .pHolder {
